--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
 <ul>
   {{#each burgers}}
     {{#unless devoured}}
-      {{> burgers/burgers-block devoured=true}}
+      {{> burgers/burgers-block devoure=true}}
     {{/unless}}
   {{/each}}
 </ul>
@@ -15,7 +15,7 @@
 <ul>
   {{#each burgers}}
     {{#if devoured}}
-      {{> burgers/burgers-block devoured=false}}
+      {{> burgers/burgers-block devoure=false}}
     {{/if}}
   {{/each}}
 </ul>
@@ -25,7 +25,7 @@
 
   <div class="form-group">
     <label for="ca">Burger Name:</label>
-    <input type="text" id="ca" name="name">
+    <input type="text" id="burgerName" name="name">
   </div>
 
   <div class="form-group">
@@ -36,3 +36,4 @@
 
   <button type="submit">Add Burger</button>
 </form>
+
