--- a/views/partials/burgers/burgers-block.handlebars
+++ b/views/partials/burgers/burgers-block.handlebars
@@ -1,8 +1,8 @@
 <li>
 	{{burger_name}}
 
-	<button class="change-devour" data-id="{{id}}" data-newdevour="{{devour}}">
-		{{#if devour}}Order again{{else}}Devour{{/if}}
+	<button class="change-devoured" data-id="{{id}}" data-newDevoured="{{devoured}}">
+		{{#if devoured}}Order Again{{else}}Devour!{{/if}}
 	</button>
 
 	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
