--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -40,16 +40,16 @@
 </div>
 </div>
 </div>
+<div class="text-center burgForm">
+<h2 class ="text-center">Add a burger</h2>
+<form class="burger-form container">
 
-<h2>Add a burger</h2>
-<form class="burger-form">
-
-    <label for="newBurger">Burger Name:</label>
+    <label class="text-center" for="newBurger">Burger Name:</label>
     <input type="text" id="newBurger" name="newBurger">
   <br>
   <button type="submit">Add Burger</button>
 </form>
-
+</div>
 
 <div class="box">
 <div class="bread-top">
