added dynamic host

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 
-
-<h1 class="text-center">Burgers!</h1>
+<div class="area" >
+<h1 class="text-center">Eat-Da-Fliping-Burgers!</h1>
 <div class="container main">
   <div class = "row">
 <div class="col-6" id ="onhold">
@@ -51,18 +51,31 @@
 </form>
 </div>
 
+
+
 <div class="box">
 <div class="bread-top">
-<div class="seed"></div>
-<div class="seed2"></div>
 </div>
 <div class="salad"></div>
 <div class="bacon"></div>
 <div class="cheese"></div>
 <div class="meat"></div>
 <div class="bread-bottom"></div>
-
-
-
 </div>
+
+
+
+            <ul class="circles">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+            </ul>
+    </div >
 
