--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,9 +5,12 @@
   <div class = "row">
 <div class="col-6" id ="onhold">
 <h2>Burgers on hold!</h2>
-
+{{!-- List of Burgers Not devoured--}}
 <ul class="holdBurg">
+
+  {{!--for each burger where devoured = "false"--}}
   {{#each burgers}}
+  
     {{#unless devoured}}
       <li>
 	{{burger_name}}
@@ -24,7 +27,7 @@
 </div>
 <div class="col-6">
 <h2>Burgers that are devoured!</h2>
-
+{{!-- All burgers where devoured = true --}}
 <ul>
   {{#each burgers}}
     {{#if devoured}}
@@ -52,7 +55,7 @@
 </div>
 
 
-
+{{!---   for Burger picture  ---}}
 <div class="box">
 <div class="bread-top">
 </div>
@@ -64,18 +67,4 @@
 </div>
 
 
-
-            <ul class="circles">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-            </ul>
-    </div >
 
