--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -79,3 +79,58 @@ border-radius: 20px;
     padding: 50px;
 
   }
+
+  @-webkit-keyframes flipInX {
+    0% {
+       -webkit-transform: perspective(400px) rotateX(90deg);
+       opacity: 0;
+    }
+    40% {
+       -webkit-transform: perspective(400px) rotateX(-10deg);
+    }
+    70% {
+       -webkit-transform: perspective(400px) rotateX(10deg);
+    }
+    100% {
+       -webkit-transform: perspective(400px) rotateX(0deg);
+       opacity: 1;
+    }
+ }
+ 
+ @keyframes flipInX {
+    0% {
+       transform: perspective(400px) rotateX(90deg); 
+       opacity: 0;
+    }
+    40% {
+       transform: perspective(400px) rotateX(-10deg);
+    }
+    70% {
+       transform: perspective(400px) rotateX(10deg);
+    }
+    100% {
+       transform: perspective(400px) rotateX(0deg);
+       opacity: 1;
+    }
+ }
+ 
+ .flipInX {
+    -webkit-backface-visibility: visible !important;
+    -webkit-animation-name: flipInX;
+    backface-visibility: visible !important;
+    animation-name: flipInX;
+ }
+
+
+ 
+
+
+@keyframes spin {
+   from {
+       transform:rotate(0deg);
+   }
+   to {
+       transform:rotate(360deg);
+   }
+}
+
